<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paymentCalendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="6"
    android:rowCount="2">

    <TableRow android:gravity="center">

        <RelativeLayout
            android:id="@+id/january"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/january_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/januaryCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/february"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/february_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/februaryCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/march"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border_locked"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/march_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/marchCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/april"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/april_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/aprilCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/may"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/may_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/mayCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/june"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/june_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/juneCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

    </TableRow>

    <TableRow android:gravity="center">

        <RelativeLayout
            android:id="@+id/july"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/july_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/julyCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/august"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/august_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/augustCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/september"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/september_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/septemberCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/october"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/october_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/octoberCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/november"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/november_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/novemberCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/december"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/payment_month_cell_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/december_label"
                android:textColor="#000000"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/decemberCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:button="@drawable/payment_custom_check_box" />
        </RelativeLayout>

    </TableRow>

</TableLayout>
